Obrazek albumu kręcący się w PlayBar. Finito.

--- a/src/AlbumCoverImage/AlbumCoverImage.css
+++ b/src/AlbumCoverImage/AlbumCoverImage.css
@@ -13,3 +13,15 @@
   0% { opacity: 0; }
   100% { opacity: .5; }
 }
+
+.rotatingAlbumCoverImage img {
+  animation: 3s rotateAlbumCover infinite;
+  animation-timing-function: linear;
+  border-radius: 100%
+}
+
+@keyframes rotateAlbumCover {
+  100% {
+    transform: rotate(-360deg);
+  }
+} 
